Fixed files in locations.  Added scrollbar.

--- a/css/BaseLayout.css
+++ b/css/BaseLayout.css
@@ -77,6 +77,28 @@ body
     width: 100vw;
 }
 
+::-webkit-scrollbar {
+    width: 2.2%;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px rgb(0, 0, 0); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(2, 0, 119); 
+    border-radius: 10px;
+    border: white solid 2px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #0026ff; 
+  }
+  
 /*header
 {
     height: 400px;
